--- Changes since 2.0alpha1 ---

- Fix issue where archiving messages in a thread would prevent the last
remaining message from being marked as read.
- Make sure conversation view works fine in other folder tabs.
- Take into account Reply-To headers when present for quick reply.
- Fix "Copy Complete" issue.
- Fixed issue where you could not use quick reply for recipients whose names
contained commas.
- Make standard keyboard shortcuts work even when the conversation view has
focus (forward them to the main window).
- Make sure we mark message as "replied to" (small blue arrow in the message
list).